fixing some spacing

--- a/css/style.styl
+++ b/css/style.styl
@@ -24,3 +24,6 @@
 
 .padding-top
   padding-top .5em
+
+.spacer-s
+  height 10px
